# Credential_Vault

./: .gitignore  README.md  pyproject.toml  run.py
src/: cryptography_handler.py  main.py  security.py  vault.py
src/vault/: app.py
src/vault/cli/: app.py  authentication.py  handler.py  main.py
src/vault/controllers/: authentication_controller.py  vault_controller.py
src/vault/core/: vault.py
src/vault/core/services/: configuration_manager.py  cryptography_handler.py  security_manager.py
src/vault/interfaces/: data_migrator_interface.py  encryption_interface.py  master_hash_repository_interface.py  password_validator_interface.py  user_io_interface.py  vault_repository_interface.py  vault_service_interface.py
src/vault/models/: credential.py  password_strength_result.py
src/vault/repositories/: file_master_hash_repository.py  json_repository.py
src/vault/services/: audit_service.py  authentication_service.py  configuration_service.py  credential_input_service.py  vault_service.py  vault_transfer_service.py
src/vault/utils/: clipboard.py  encryptors.py  password_generator.py  password_validator.py
src/vault/views/: console_view.py
tests/models/: test_credential.py
tests/services/: test_audit_service.py  test_authentication_service.py
tests/utils/: test_clipboard.py  test_encryptors.py  test_password_generator.py  test_password_validator.py
tests/views/: test_console_view.py
